# qt-whatsapp-chat-generator

./: .gitignore  CMakeLists.txt  README.md
cmake/libraries/: fmt.cmake  opencv.cmake  qt.cmake  qxlsx.cmake  spdlog.cmake  utils.cmake
cmake/platform/: generic_builder.cmake  linux_builder.cmake  windows_builder.cmake
cmake/utils/: get_linux_kernel.cmake  get_windows_version.cmake  list_all_subdirectories.cmake  upx_compress.cmake
res/: resources.qrc
res/install/linux/desktop/: qt-whatsapp-chat-generator.desktop
src/: main.cpp
src/app/console_panel_widget/: console_panel_widget.cpp  console_panel_widget.hpp
src/app/control_panel_widget/: control_panel_widget.cpp  control_panel_widget.hpp
src/app/main_window/: main_window.cpp  main_window.hpp
src/app/overlay_widget/: overlay_widget.cpp  overlay_widget.hpp
src/utils/settings_manager/: defaults.hpp  settings_manager.cpp  settings_manager.hpp
src/utils/spdlog_wrapper/: spdlog_wrapper.hpp
src/utils/translation_manager/: translation_manager.cpp  translation_manager.hpp
src/utils/whatsapp_chat_generator/: whatsapp_chat_generator.cpp  whatsapp_chat_generator.hpp
src/utils/whatsapp_chat_parser/: whatsapp_chat_parser.cpp  whatsapp_chat_parser.hpp  whatsapp_message.cpp  whatsapp_message.hpp
translations/: lang_en_GB.ts  lang_ru_RU.ts
